# copilot_real_time_interview

./: .gitignore  LICENSE  README.md  cookbook.ipynb  demo.ipynb  push_to_talk_app.py  pyproject.toml  pyrightconfig.json  run.py  setup_supabase.sh  start.sh  test_audio_ws.py
backend/: README.md  api_launcher.py  flask_app.py  pyproject.toml
backend/api/: __init__.py  routes.py  socketio_handlers.py  sse.py
backend/core/: __init__.py
desktop_app/: README.md  intervista_assistant.py  launcher.py  main.py  pyproject.toml
desktop_app/models/: openai_integration.py
desktop_app/utils/: __init__.py  screen_selector.py
frontend/: .env.local.example  SUPABASE_SETUP.md  middleware.ts  package-lock.json  package.json
frontend/app/: chatgpt-interface.tsx  layout.tsx  page.tsx
frontend/app/auth-debug/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/app/components/chat/: ControlBar.tsx  MessageInput.tsx  MessageList.tsx
frontend/app/context/: AuthContext.tsx
frontend/app/debug/: page.tsx
frontend/app/hooks/: useConversations.ts  useEventStream.ts  usePrompts.ts  useScreenCapture.ts  useSession.ts  useUserSettings.ts
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/types/: chat.ts
frontend/components/ui/: select.tsx
frontend/utils/: api.ts  audio.ts  eventStream.ts  formatMessage.ts  screenCapture.ts  socketio.ts  supabase.ts
interview_assistant/: __init__.py  intervista_assistant.py  launcher.py  main.py  realtime_text_thread.py  ui.py
interview_assistant/utils/: screenshot_utils.py
intervista_assistant/: .env.example  README.md  __init__.py  api.py  api_launcher.py  flask_app.py  intervista_assistant.py  launcher.py  main.py  pyproject.toml  realtime_text_thread.py  system_prompt.json  ui.py  web_realtime_text_thread.py  websocket_realtime_text_thread.py
intervista_assistant/api/: auth.py  auth_socket.py  routes.py  socketio_handlers.py  sse.py
intervista_assistant/core/: session_manager.py  utils.py
intervista_assistant/models/: __init__.py
intervista_assistant/utils/: __init__.py  screen_selector.py  screenshot_utils.py  think_process.py
tests/: audio_util.py  push_to_talk_app.py  record_audio.py  test_audio_ws.py  test_text.py  test_text_async.py  test_text_ws.py
