[tool.poetry]
name = "intervista-assistant"
version = "0.1.0"
description = ""
authors = ["Carlo Giuseppe Sergi <c.sergi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.64.0"
pyqt5 = "^5.15.11"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
pyperclip = "^1.9.0"
pyautogui = "^0.9.54"
requests = "^2.32.3"
pyaudio = "^0.2.14"
websocket-client = "^1.8.0"
numpy = "^2.2.3"
sounddevice = "^0.5.1"
soundfile = "^0.13.1"
textual = "^2.1.2"
pydub = "^0.25.1"
markdown = "^3.7"
mss = "^9.0.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
websockets = "^15.0"
python-multipart = "^0.0.20"
flask = "^3.1.0"
flask-cors = "^5.0.1"
flask-sock = "^0.7.0"
python-socketio = "^5.12.1"
flask-socketio = "^5.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "intervista_assistant.api_launcher:main"
