[tool.poetry]
name = "intervista-assistant-desktop"
version = "0.1.0"
description = "App desktop per l'assistente di interviste in tempo reale"
authors = ["Carlo Giuseppe Sergi <c.sergi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "^5.15.11"
openai = "^1.64.0"
python-dotenv = "^1.0.1"
pyaudio = "^0.2.14"
numpy = "^2.2.3"
mss = "^9.0.1"
pillow = "^11.1.0"
pyperclip = "^1.9.0"
pyautogui = "^0.9.54"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "desktop_app.launcher:main" 